// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preset regression (VROL-472) > preset "assembly-cell" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 3309,
  "bottleneckLabel": "Manual sub-asm",
  "bottleneckReason": "starvation",
  "completed": 479,
  "lineOee": 0.999652,
  "throughputPartsPerHour": 14995,
}
`;

exports[`preset regression (VROL-472) > preset "bakery" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 7337,
  "bottleneckLabel": "Oven",
  "bottleneckReason": "starvation",
  "completed": 575,
  "lineOee": 1,
  "throughputPartsPerHour": 18000,
}
`;

exports[`preset regression (VROL-472) > preset "beverage-canning" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 5092,
  "bottleneckLabel": "Tray pack",
  "bottleneckReason": "starvation",
  "completed": 959,
  "lineOee": 1,
  "throughputPartsPerHour": 30021,
}
`;

exports[`preset regression (VROL-472) > preset "bottling-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 6628,
  "bottleneckLabel": "Capper",
  "bottleneckReason": "starvation",
  "completed": 212,
  "lineOee": 0.693818,
  "throughputPartsPerHour": 13876,
}
`;

exports[`preset regression (VROL-472) > preset "changeover-heavy" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 5840,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 256,
  "lineOee": 0.111304,
  "throughputPartsPerHour": 8014,
}
`;

exports[`preset regression (VROL-472) > preset "conveyor-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 13086,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 190,
  "lineOee": 0.991304,
  "throughputPartsPerHour": 5948,
}
`;

exports[`preset regression (VROL-472) > preset "conveyor-tis-dominated" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 52857,
  "bottleneckLabel": "Pick",
  "bottleneckReason": "blocking",
  "completed": 30,
  "lineOee": 0.026087,
  "throughputPartsPerHour": 939,
}
`;

exports[`preset regression (VROL-472) > preset "dairy-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 12352,
  "bottleneckLabel": "Pasteurizer",
  "bottleneckReason": "starvation",
  "completed": 128,
  "lineOee": 1,
  "throughputPartsPerHour": 4007,
}
`;

exports[`preset regression (VROL-472) > preset "electronics-smt" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 3655,
  "bottleneckLabel": "Reflow",
  "bottleneckReason": "starvation",
  "completed": 529,
  "lineOee": 1,
  "throughputPartsPerHour": 22405,
}
`;

exports[`preset regression (VROL-472) > preset "energy-budget-squeeze" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 2490,
  "bottleneckLabel": "Reactor",
  "bottleneckReason": "starvation",
  "completed": 639,
  "lineOee": 1,
  "throughputPartsPerHour": 20003,
}
`;

exports[`preset regression (VROL-472) > preset "maintenance-bound" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 1843,
  "bottleneckLabel": "Conditioner",
  "bottleneckReason": "maintenance",
  "completed": 390,
  "lineOee": 0.709091,
  "throughputPartsPerHour": 25527,
}
`;

exports[`preset regression (VROL-472) > preset "mixed-model-job-shop" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 7103,
  "bottleneckLabel": "Lathe",
  "bottleneckReason": "starvation",
  "completed": 209,
  "lineOee": 0.32713,
  "throughputPartsPerHour": 6543,
}
`;

exports[`preset regression (VROL-472) > preset "multi-product-changeover" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 5455,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 132,
  "lineOee": 0.288,
  "throughputPartsPerHour": 8640,
}
`;

exports[`preset regression (VROL-472) > preset "parallel-fillers" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 1710,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 550,
  "lineOee": 1,
  "throughputPartsPerHour": 36000,
}
`;

exports[`preset regression (VROL-472) > preset "per-edge-buffer-demo" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 10022,
  "bottleneckLabel": "Downstream",
  "bottleneckReason": "starvation",
  "completed": 275,
  "lineOee": 1,
  "throughputPartsPerHour": 18000,
}
`;

exports[`preset regression (VROL-472) > preset "pharma-packaging" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 7935,
  "bottleneckLabel": "QC visual",
  "bottleneckReason": "starvation",
  "completed": 209,
  "lineOee": 0.532,
  "throughputPartsPerHour": 13680,
}
`;

exports[`preset regression (VROL-472) > preset "print-batch-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 57268,
  "bottleneckLabel": "3D printer",
  "bottleneckReason": "starvation",
  "completed": 80,
  "lineOee": 1,
  "throughputPartsPerHour": 1646,
}
`;

exports[`preset regression (VROL-472) > preset "print-multi-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 33902,
  "bottleneckLabel": "3D printer (×3)",
  "bottleneckReason": "starvation",
  "completed": 240,
  "lineOee": 1,
  "throughputPartsPerHour": 4937,
}
`;

exports[`preset regression (VROL-472) > preset "shampoo-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 203,
  "bottleneckLabel": "Family label",
  "bottleneckReason": "breakdown",
  "completed": 1913,
  "lineOee": 0.853919,
  "throughputPartsPerHour": 59885,
}
`;

exports[`preset regression (VROL-472) > preset "source-rate" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 0,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 0,
  "lineOee": 0,
  "throughputPartsPerHour": 0,
}
`;

exports[`preset regression (VROL-472) > preset "stochastic-needs-reps" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 969,
  "bottleneckLabel": "Source",
  "bottleneckReason": "idle",
  "completed": 544,
  "lineOee": 0.989091,
  "throughputPartsPerHour": 35607,
}
`;

exports[`preset regression (VROL-472) > preset "sustainable-line" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 17866,
  "bottleneckLabel": "Filler",
  "bottleneckReason": "starvation",
  "completed": 165,
  "lineOee": 1,
  "throughputPartsPerHour": 5165,
}
`;

exports[`preset regression (VROL-472) > preset "two-line-packing" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 7279,
  "bottleneckLabel": "Packer",
  "bottleneckReason": "starvation",
  "completed": 250,
  "lineOee": 1,
  "throughputPartsPerHour": 16364,
}
`;

exports[`preset regression (VROL-472) > preset "upstream-limited" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 750,
  "bottleneckLabel": "Slow source",
  "bottleneckReason": "idle",
  "completed": 183,
  "lineOee": 0.998182,
  "throughputPartsPerHour": 11978,
}
`;

exports[`preset regression (VROL-472) > preset "wip-pileup" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 32811,
  "bottleneckLabel": "Slow downstream",
  "bottleneckReason": "starvation",
  "completed": 575,
  "lineOee": 1,
  "throughputPartsPerHour": 18000,
}
`;

exports[`preset regression (VROL-472) > preset "worker-bottleneck" KPI summary matches snapshot 1`] = `
{
  "avgTimeInSystemMs": 4483,
  "bottleneckLabel": "Capper",
  "bottleneckReason": "blocking",
  "completed": 280,
  "lineOee": 0.509091,
  "throughputPartsPerHour": 18327,
}
`;
